--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body{
     background-image: url("/images/paint.jpg");
     background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #get-started{
     text-align: center;
     padding-top: 25%;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+                 0px 8px 13px rgba(0,0,0,0.1),
+                 0px 18px 23px rgba(0,0,0,0.1);
 }
 .left-buttons{
     margin-top: .5%;
