--- a/style.css
+++ b/style.css
@@ -7,13 +7,49 @@ body{
     text-align: center;
     padding-top: 25%;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
+    font-family: 'Bree Serif', serif;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                  0px 8px 13px rgba(0,0,0,0.1),
                  0px 18px 23px rgba(0,0,0,0.1);
 }
-.left-buttons{
+/*.left-buttons{
     margin-top: .5%;
     margin-left: 80%;
+}*/
+#maler{
+    margin-top: 0.5%;
+    margin-left: 1%;
+}
+hr{
+    margin-left: 175px;
+    margin-right: 175px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4),
+                0px 4px 4px rgba(0,0,0,0.1),
+                0px 2px 2px rgba(0,0,0,0.1);
+}
+#username{
+    margin-top: 3%;
+    margin-left: 57%;
+}
+#Contact{
+    font-family: 'Bree Sarif', serif;
+    text-align: center;
+    font-size: 200%;
+    margin-top: 0.5%;
+    margin-left: 45%;
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+                 0px 8px 13px rgba(0,0,0,0.1),
+                 0px 18px 23px rgba(0,0,0,0.1);
+}
+#email{
+    margin-top: 0.5%;
+    margin-left: 57%;
+}
+#text{
+    margin-top: 0.5%;
+    margin-left: 57%;
+}
+#send{
+    margin-top: 0.5%;
+    margin-left: 70%;
 }
